data attributes loading policy

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -418,6 +418,8 @@ components:
           $ref: '#/components/schemas/WaitUntilApiFailurePolicy'
         skipWaitUntil:
           type: boolean
+        dataAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
     WorkflowStartOptions:
       type: object
       properties:
