--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -194,6 +194,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /api/v1/workflow/rpc:
+    post:
+      summary: "execute an RPC of a workflow"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkflowRpcRequest'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkflowRpcResponse'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/workflow/timer/skip:
     post:
       summary: "skip the timer of a workflow"
@@ -251,7 +272,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  # workflowState APIs are hosted by iWF SDK for iWF server to call
+  # Below APIs are hosted by iWF SDK for iWF server to call
   /api/v1/workflowState/start: #TODO: rename to /api/v1/workflowState/waitUntil
     post:
       summary: "for invoking WorkflowState.waitUntil API"
@@ -288,6 +309,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/WorkflowStateExecuteResponse'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /api/v1/workflowWorker/rpc:
+    post:
+      summary: "for invoking workflow RPC API in the worker"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkflowWorkerRpcRequest'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkflowWorkerRpcResponse'
         '400':
           description: Invalid input
           content:
@@ -723,6 +765,78 @@ components:
           type: integer
         jsonData:
           type: string # serialized data of service.DumpAllInternalResponse model of iwf repo
+    WorkflowRpcRequest:
+      type: object
+      required:
+        - workflowId
+        - rpcName
+      properties:
+        workflowId:
+          type: string
+        workflowRunId:
+          type: string
+        rpcName:
+          type: string
+        input:
+          $ref: '#/components/schemas/EncodedObject'
+        searchAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        dataAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        timeoutSeconds:
+          type: integer
+    WorkflowRpcResponse:
+      type: object
+      properties:
+        output:
+          $ref: '#/components/schemas/EncodedObject'
+    WorkflowWorkerRpcRequest:
+      type: object
+      required:
+        - context
+        - rpcName
+      properties:
+        context:
+          $ref: '#/components/schemas/Context'
+        rpcName:
+          type: string
+        input:
+          $ref: '#/components/schemas/EncodedObject'
+        searchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttribute'
+        dataAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+    WorkflowWorkerRpcResponse:
+      type: object
+      properties:
+        output:
+          $ref: '#/components/schemas/EncodedObject'
+        stateDecision:
+          $ref: '#/components/schemas/StateDecision'
+        upsertSearchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttribute'
+        upsertDataAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+        recordEvents:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+        upsertStateLocals: # this is probably no much value but we keep it to make the APIs more consistent
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+        publishToInterStateChannel:
+          type: array
+          items:
+            $ref: '#/components/schemas/InterStateChannelPublishing'
     WorkflowStateWaitUntilRequest:
       type: object
       required:
@@ -1026,11 +1140,9 @@ components:
     Context:
       type: object
       required:
-        - commandId
         - workflowId
         - workflowRunId
         - workflowStartedTimestamp
-        - stateExecutionId
       properties:
         workflowId:
           type: string
