Add workflow type to worker rpc request

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -794,10 +794,13 @@ components:
       type: object
       required:
         - context
+        - workflowType
         - rpcName
       properties:
         context:
           $ref: '#/components/schemas/Context'
+        workflowType:
+          type: string
         rpcName:
           type: string
         input:
