--- a/iwf.yaml
+++ b/iwf.yaml
@@ -159,14 +159,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/WorkflowSearchRequest'
+              $ref: '#/components/schemas/ObjectSearchRequest'
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/WorkflowSearchResponse'
+                $ref: '#/components/schemas/ObjectSearchResponse'
         '400':
           description: Invalid input
           content:
@@ -709,7 +709,7 @@ components:
           type: string
         completedStateOutput:
           $ref: '#/components/schemas/EncodedObject'
-    WorkflowSearchRequest:
+    ObjectSearchRequest:
       type: object
       required:
         - query
@@ -721,7 +721,7 @@ components:
           format: int32
         nextPageToken:
           type: string
-    WorkflowSearchResponse:
+    ObjectSearchResponse:
       type: object
       properties:
         workflowExecutions:
