--- a/iwf.yaml
+++ b/iwf.yaml
@@ -439,6 +439,8 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         dataObjectsLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        cachedDataAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
         commandCarryOverPolicy:
           $ref: '#/components/schemas/CommandCarryOverPolicy'
         startApiTimeoutSeconds: # NOTE: this is the timeout for the single attempt of Cadence/Temporal activity(start to close timeout)
@@ -627,7 +629,11 @@ components:
           type: string
         workflowRunId:
           type: string
-        keys: # return all objects if this is empty
+        keys: # return all objects if this and cachedAttributeKeys are empty
+          type: array
+          items:
+            type: string
+        cachedAttributeKeys:
           type: array
           items:
             type: string
@@ -635,6 +641,10 @@ components:
       type: object
       properties:
         objects:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+        cachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
@@ -818,29 +828,6 @@ components:
           type: integer
         jsonData:
           type: string # serialized data of service.DumpAllInternalResponse model of iwf repo
-    WorkflowStateStartRequest:
-      type: object
-      required:
-        - context
-        - workflowStateId
-        - workflowType
-      properties:
-        context:
-          $ref: '#/components/schemas/Context'
-        workflowType:
-          type: string
-        workflowStateId:
-          type: string
-        stateInput:
-          $ref: '#/components/schemas/EncodedObject'
-        searchAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/SearchAttribute'
-        dataObjects:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
     WorkflowSkipTimerRequest:
       type: object
       required:
@@ -887,6 +874,8 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         dataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        cachedDataAttributesLoadingPolicy:
+          $ref: '#/components/schemas/PersistenceLoadingPolicy'
         timeoutSeconds:
           type: integer
     WorkflowRpcResponse:
@@ -917,6 +906,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
+        cachedDataAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
     WorkflowWorkerRpcResponse:
       type: object
       properties:
@@ -932,6 +925,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
+        upsertCachedDataAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
         recordEvents:
           type: array
           items:
@@ -944,6 +941,33 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/InterStateChannelPublishing'
+    WorkflowStateStartRequest:
+      type: object
+      required:
+        - context
+        - workflowStateId
+        - workflowType
+      properties:
+        context:
+          $ref: '#/components/schemas/Context'
+        workflowType:
+          type: string
+        workflowStateId:
+          type: string
+        stateInput:
+          $ref: '#/components/schemas/EncodedObject'
+        searchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttribute'
+        dataObjects:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+        cachedDataAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
     WorkflowStateStartResponse:
       type: object
       properties:
@@ -952,6 +976,10 @@ components:
           items:
             $ref: '#/components/schemas/SearchAttribute'
         upsertDataObjects:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+        upsertCachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
@@ -992,6 +1020,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
+        CachedDataAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
         stateLocals :
           type: array
           items:
@@ -1008,6 +1040,10 @@ components:
           items:
             $ref: '#/components/schemas/SearchAttribute'
         upsertDataObjects:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
+        upsertCachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
