deprecate dataObjects|searchAttributes/get and replaced by persistence/get

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -68,42 +68,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /api/v1/workflow/dataobjects/get:
+  /api/v1/workflow/persistence/get:
     post:
       summary: "get workflow data objects"
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/WorkflowGetDataObjectsRequest'
+              $ref: '#/components/schemas/WorkflowGetPersistenceDataRequest'
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/WorkflowGetDataObjectsResponse'
-        '400':
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-  /api/v1/workflow/searchattributes/get:
-    post:
-      summary: "get workflow search attributes"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/WorkflowGetSearchAttributesRequest'
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WorkflowGetSearchAttributesResponse'
+                $ref: '#/components/schemas/WorkflowGetPersistenceDataResponse'
         '400':
           description: Invalid input
           content:
@@ -590,7 +569,7 @@ components:
         - CANCEL # default behavior
         - TERMINATE # this will hard terminate the workflow
         - FAIL
-    WorkflowGetDataObjectsRequest:
+    WorkflowGetPersistenceDataRequest:
       type: object
       required:
         - workflowId
@@ -599,18 +578,22 @@ components:
           type: string
         workflowRunId:
           type: string
-        keys: # return all objects if this and cachedAttributeKeys are empty
+        dataAttributes:
           type: array
           items:
             type: string
-        cachedAttributeKeys:
+        cachedDataAttributes:
           type: array
           items:
             type: string
-    WorkflowGetDataObjectsResponse:
+        searchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttributeKeyAndType'
+    WorkflowGetPersistenceDataResponse:
       type: object
       properties:
-        objects:
+        dataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
@@ -618,22 +601,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
-    WorkflowGetSearchAttributesRequest:
-      type: object
-      required:
-        - workflowId
-      properties:
-        workflowId:
-          type: string
-        workflowRunId:
-          type: string
-        keys: # return all search attributes if this is empty
-          type: array
-          items:
-            $ref: '#/components/schemas/SearchAttributeKeyAndType'
-    WorkflowGetSearchAttributesResponse:
-      type: object
-      properties:
         searchAttributes:
           type: array
           items:
