Add request search attribute key and types for rpc request

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -785,6 +785,10 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         cachedDataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
+        searchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttributeKeyAndType'
         timeoutSeconds:
           type: integer
     WorkflowRpcResponse:
