--- a/iwf.yaml
+++ b/iwf.yaml
@@ -542,7 +542,7 @@ components:
         - LOAD_ALL_WITHOUT_LOCKING
         - LOAD_PARTIAL_WITHOUT_LOCKING
         - LOAD_PARTIAL_WITH_EXCLUSIVE_LOCK
-        - LOAD_NONE_PERSISTENCE
+        - LOAD_NONE
     CommandCarryOverPolicy:
       type: object
       properties:
